--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -751,7 +751,7 @@
 					"chart.js",
 					"plotly.js",
 					"angular2-grid",
-					"html-query-plan",
+					"kburtram-query-plan",
 					"html-to-image",
 					"turndown",
 					"gridstack",
