Restore Notebook language registration.

--- a/extensions/notebook/package.json
+++ b/extensions/notebook/package.json
@@ -319,6 +319,18 @@
         "title": "%notebook.command.highlightText%"
       }
     ],
+    "languages": [
+      {
+        "id": "notebook",
+        "extensions": [
+          ".ipynb"
+        ],
+        "aliases": [
+          "Notebook"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
     "menus": {
       "commandPalette": [
         {
