Register new provider languages in ModeRegistry. Standardize provider fileExtensions to always start with a period.

--- a/extensions/notebook/package.json
+++ b/extensions/notebook/package.json
@@ -689,7 +689,7 @@
     "notebook.providers": [{
       "provider": "jupyter",
       "fileExtensions": [
-        "IPYNB"
+        ".ipynb"
       ],
       "standardKernels": [
         {
